# ContractKit

./: .gitignore  pyproject.toml
app/api/: main.py
app/config/: const.py  log.py
app/controller/: filler.py  review_controller.py
app/prepocess/: html2word.py  template_convert.py
app/workflow/: filling.py  reviewer.py  utils.py
prompts/: review.py
ui/: README.md  package-lock.json  package.json
ui/public/: index.html  manifest.json
ui/src/: App.tsx  index.tsx
ui/src/components/: AnalysisPanel.tsx  ContractPanel.tsx  FileUploader.tsx
ui/src/services/: api.ts
ui/src/styles/: FileUploader.css  index.css
ui/src/types/: index.ts
ui/src/utils/: analysis.ts
